<?xml version="1.0" encoding="utf-8"?>
<!--抽屉左侧菜单，分成三组-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--第一组：首页 / 大会员 / 免流量 / 离线缓存 -->
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"
            android:checked="true"/>

        <item
            android:id="@+id/nav_vip"
            android:icon="@drawable/ic_nav_vip"
            android:title="@string/nav_vip"/>

        <item
            android:id="@+id/nav_point"
            android:icon="@drawable/ic_nav_point"
            android:title="@string/nav_vip_point"/>

        <item
            android:id="@+id/nav_unicom"
            android:icon="@drawable/ic_nav_unicom"
            android:title="@string/nav_unicom"/>

        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_download_grey_24dp"
            android:title="@string/nav_download"/>
    </group>

    <!-- 第二组：稍后再看 / 收藏 / 历史 / 关注 / 钱包 -->
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_view_later"
            android:icon="@drawable/ic_view_later_24dp"
            android:title="@string/nav_view_later"/>

        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_star"/>

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_history" />

        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_people" />

        <item
            android:id="@+id/nav_account_balance_wallet"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/nav_account_balance_wallet" />
    </group>

    <!-- 第三组：主题选择 / 设置 -->
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_color_lens"
            android:icon="@drawable/ic_color_lens_black_24dp"
            android:title="@string/nav_color_lens" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

</menu>